[gd_scene load_steps=5 format=3 uid="uid://c0sid4hykutks"]

[ext_resource type="Script" path="res://scene/MainGame/Enemy/BasicShotgunEnemy.gd" id="1_t2w2a"]
[ext_resource type="PackedScene" uid="uid://d04mdu34hx8cj" path="res://scene/MainGame/Enemy/EnemyModel/BasicShotgunEnemyModel.tscn" id="2_ykj6y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bafq3"]
radius = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_f64fs"]
radius = 1.0

[node name="BasicShotgunEnemy" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_t2w2a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bafq3")

[node name="StateTimer" type="Timer" parent="."]
autostart = true

[node name="RepelZone" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="RepelZone"]
shape = SubResource("CircleShape2D_f64fs")

[node name="Model" parent="." instance=ExtResource("2_ykj6y")]

[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
[connection signal="area_entered" from="RepelZone" to="." method="_on_repel_zone_area_entered"]
